--- a/charts/dp-config-aws/charts/crossplane-components/charts/claims/values.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/charts/claims/values.yaml
@@ -13,6 +13,46 @@ commonResourcePrefix: ""
 # commonTags:
 #   cluster-name: ""
 #   owner: ""
+s3:
+  # To create S3 claim set create to true
+  create: false
+  # Secret name in the same release namespace where the s3_id and s3_arn will be stored
+  connectionDetailsSecret: ""
+  # To create VPC endpoints for S3 set create to true. This will create gateway endpoints for route tables and interface endpoints for subnets
+  endpoints:
+    create: true
+  # A subset of parameters from https://docs.aws.amazon.com/AWSCloudFormation/latest/TemplateReference/aws-resource-s3-bucket.html are supported
+  # Mandatory configuration parameters for S3
+  mandatoryConfigurationParameters:
+    bucketName: ""
+  # Additional configuration parameters for S3
+  # additionalConfigurationParameters:
+  #  # encryption:
+  #  #   enabled: true
+  #  #   sseAlgorithm: "AES256"  # AES256 | aws:kms
+  #  #   kmsMasterKeyId: ""  # Required if sseAlgorithm is aws:kms
+  #   lifecycleConfiguration:
+  #     rules:
+  #       - id: "langfuse_lifecycle"
+  #         status: "Enabled"
+  #         filter:
+  #           prefix: ""
+  #         transitions:
+  #           - days: 90
+  #             storageClass: "STANDARD_IA"
+  #           - days: 180
+  #             storageClass: "GLACIER"
+  #   privateDNSEnabled: false
+  #   publicAccessBlock:
+  #     blockPublicAcls: true
+  #     blockPublicPolicy: true
+  #     ignorePublicAcls: true
+  #     restrictPublicBuckets: true
+  #   versioning: "Enabled"  # Enabled | Suspended
+  # Resource-specific tags
+  # resourceTags:
+  #   resource-name: s3
+  #   cost-center: control-plane
 efs:
   # To create EFS claim set create to true
   create: false
