--- a/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/cluster-role.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/cluster-role.yaml
@@ -29,3 +29,6 @@ rules:
 - apiGroups: ["cache.platform.tibco.com"]
   resources: ["compositereplicationgroups"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["s3.platform.tibco.com"]
+  resources: ["composites3bucket", "compositenoeps3bucket"]
+  verbs: ["get", "list", "watch"]
