--- a/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/elasticache-xrd.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/elasticache-xrd.yaml
@@ -20,8 +20,11 @@ spec:
     kind: TibcoReplicationGroup
     plural: tibcoreplicationgroups
   connectionSecretKeys:
-    - configuration_endpoint
-    - configuration_port
+    - endpoint
+    - password
+    - port
+    - reader_endpoint
+    - reader_port
   versions:
     - name: v1alpha1
       served: true
