--- a/charts/dp-configure-namespace/templates/devhub-role.yaml
+++ b/charts/dp-configure-namespace/templates/devhub-role.yaml
@@ -39,6 +39,14 @@ rules:
   resources: ["routes", "routes/custom-host"]
   verbs: ["list", "get", "create", "update", "delete", "patch"]
 {{- end }}
+- apiGroups: ["gateway.networking.k8s.io"]
+  resources: ["httproutes"]
+  verbs: ["get", "list", "create", "update", "patch", "delete"]
+{{- if .Values.rbac.gatewayAPI.nginxGatewayFabric }}
+- apiGroups: ["gateway.nginx.org"]
+  resources: ["observabilitypolicies"]
+  verbs: ["get", "list", "create", "update", "patch", "delete"]
+{{- end }}
 
 ---
 
