--- a/charts/o11y-service/templates/secret-cleanup-hook.yaml
+++ b/charts/o11y-service/templates/secret-cleanup-hook.yaml
@@ -24,12 +24,16 @@ spec:
         {{- include "o11y-service.labels" . | nindent 8 }}
     spec:
       restartPolicy: Never
+      {{- if .Values.podSecurityContext }}
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- end }}
       imagePullSecrets:
       - name: {{ .Values.global.cp.containerRegistry.secret }}
       serviceAccountName: {{ .Values.global.cp.resources.serviceaccount.serviceAccountName }}
       containers:
       - name: secret-cleanup
-        image: {{ include "o11y-service.image.registry" .}}{{"/"}}{{ include "o11y-service.image.repository" .}}{{"/"}}o11y-auditsafe-scripts:{{.Values.global.o11yservice.job.image.tag }}
+        image: {{ include "o11y-service.image.registry" .}}{{"/"}}{{ include "o11y-service.image.repository" .}}{{"/"}}core-cp-scripts:{{.Values.global.o11yservice.job.image.tag }}
         imagePullPolicy: IfNotPresent
         command:
         - /bin/bash
@@ -94,13 +98,8 @@ spec:
           fi
           
           echo "Secret cleanup completed."
+        {{- if .Values.securityContext }}
         securityContext:
-          allowPrivilegeEscalation: false
-          runAsNonRoot: true
-          runAsUser: 1000
-          capabilities:
-            drop:
-            - ALL
-          seccompProfile:
-            type: RuntimeDefault
+          {{- toYaml .Values.securityContext | nindent 10 }}
+        {{- end }}
 {{- end }}
