--- a/charts/tp-cp-proxy/templates/jobs.yaml
+++ b/charts/tp-cp-proxy/templates/jobs.yaml
@@ -74,12 +74,16 @@ spec:
               value: {{ .noProxy | quote }}
             {{- end }}          
             {{- end }}
+            {{- if .Values.global.cp.cpCertificateSecret }}
+            - name: SSL_CERT_DIR
+              value: /etc/ssl/certs/cp-certs
+            {{- end }}
           volumeMounts:
             - name: logs
               mountPath: /tmp/logs
         {{- if .Values.global.cp.cpCertificateSecret }}
             - name: cp-certs
-              mountPath: /etc/ssl/certs/
+              mountPath: /etc/ssl/certs/cp-certs
         {{- end }}
       imagePullSecrets:
         - name: {{ .Values.global.cp.containerRegistry.secret }} {{/* optional imagePullSecret for private repo. no op if secret does not exist */}}
@@ -163,8 +167,6 @@ spec:
               value: {{ .noProxy | quote }}
             {{- end }}          
             {{- end }}
-          securityContext:
-            readOnlyRootFilesystem: true
       imagePullSecrets:
         - name: {{ .Values.global.cp.containerRegistry.secret }} {{/* optional imagePullSecret for private repo. no op if secret does not exist */}}
       volumes:
