--- a/charts/dp-config-aks/values.yaml
+++ b/charts/dp-config-aks/values.yaml
@@ -129,6 +129,37 @@ kong:
     tls:
       enabled: false
 
+nginx-gateway-fabric:
+  # chart values: https://github.com/nginxinc/nginx-gateway-fabric/blob/main/charts/nginx-gateway-fabric/values.yaml
+  enabled: false
+  nginxGateway:
+    gatewayClassName: nginx
+    gatewayControllerName: gateway.nginx.org/nginx-gateway-controller
+    config:
+      logging:
+        level: info
+  nginx:
+    service:
+      type: LoadBalancer
+      annotations: []
+
+haproxy:
+  # chart values: https://github.com/haproxytech/helm-charts/blob/main/kubernetes-ingress/values.yaml
+  enabled: false
+  controller:
+    service:  # for external-dns
+      type: ClusterIP
+    nodeSelector:
+      kubernetes.io/os: linux
+
+# Istio charts
+# istio-base chart, to be installed in istio-system namespace
+istio-base:
+  enabled: false
+# istiod chart, to be installed in istio-system namespace
+istiod:
+  enabled: false
+
 global:
   dnsSandboxSubdomain: ""
   dnsGlobalTopDomain: ""
