--- a/charts/dp-config-es/templates/elastic-ingress.yaml
+++ b/charts/dp-config-es/templates/elastic-ingress.yaml
@@ -12,7 +12,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}-elastic
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.kibana.ingress.annotations }}
+  {{- with .Values.es.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
