--- a/charts/dp-core-infrastructure/Chart.yaml
+++ b/charts/dp-core-infrastructure/Chart.yaml
@@ -6,17 +6,17 @@
 
 
 apiVersion: v2
-appVersion: "1.14.0"
+appVersion: "1.15.0"
 dependencies:
-- condition: tibtunnel.enabled
+- condition: global.tibco.hybridConnectivity.enabled
   name: tp-tibtunnel
   repository: ""
-  version: 1.14.*
+  version: 1.15.*
 - condition: tp-provisioner-agent.enabled
   name: tp-provisioner-agent
   repository: ""
-  version: 1.14.*
+  version: 1.15.*
 description: A Helm chart for Data Plane Infrastructure
 name: dp-core-infrastructure
 type: application
-version: 1.14.2
+version: 1.15.8
