--- a/charts/o11y-service/templates/secrets.yaml
+++ b/charts/o11y-service/templates/secrets.yaml
@@ -26,12 +26,12 @@ stringData:
 {{- toYaml .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.headers | nindent 8 }}
 {{- end }}
 {{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.exporter.userApps.kind "openSearch" }}
-  LOGS_EXPORTER_APP_OS_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.openSearch.password }}
-{{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.openSearch.headers }}
+  LOGS_EXPORTER_APP_OS_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.password }}
+{{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.headers }}
   headers_logs_expo_userapp_{{ $key }}: {{ quote $value }}
 {{- end }}
   headers_logs_expo_userapp: |-
-{{- toYaml .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.openSearch.headers | nindent 8 }}
+{{- toYaml .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.headers | nindent 8 }}
 {{- end }}
 {{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.exporter.userApps.kind "kafka" }}
   LOGS_EXPORTER_APP_KAFKA_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.kafka.password }}
@@ -78,16 +78,20 @@ stringData:
 {{- if .Values.global.cp.resources.o11yv3.logsServer.config.exporter.auditSafe.enabled }}
 {{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.exporter.auditSafe.kind "elasticSearch" }}
   LOGS_EXPORTER_AUDITSAFE_ES_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.password }}
+{{- end }}
+{{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.exporter.auditSafe.kind "openSearch" }}
+  LOGS_EXPORTER_AUDITSAFE_OS_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.password }}
+{{- end }}
 {{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.headers }}
   headers_logs_expo_auditsafe_{{ $key }}: {{ quote $value }}
 {{- end }}
   headers_logs_expo_auditsafe: |-
 {{- toYaml .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.headers | nindent 8 }}
 {{- end }}
-{{- end }}
+
 ##logproxy:auditSafe
 {{- if .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.enabled }}
-{{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.kind "elasticSearch" }}
+{{- if or (eq .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.kind "elasticSearch") (eq .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.kind "openSearch")}}
   logserver-proxy-auditsafe-password: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.proxy.auditSafe.elasticSearch.password }}
 {{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.proxy.auditSafe.elasticSearch.headers }}
   headers-logs-proxy-auditsafe-{{ $key }}: {{ quote $value }}
