--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -93,13 +93,13 @@ presets:
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-attributes-processor for details on the receiver.
   kubernetesAttributes:
     enabled: false
-    # When enabled the processor will extra all labels for an associated pod and add them as resource attributes.
+    # When enabled the processor will extract all labels for an associated pod and add them as resource attributes.
     # The label's exact name will be the key.
     extractAllPodLabels: false
-    # When enabled the processor will extra all annotations for an associated pod and add them as resource attributes.
+    # When enabled the processor will extract all annotations for an associated pod and add them as resource attributes.
     # The annotation's exact name will be the key.
     extractAllPodAnnotations: false
-  # Configures the collector to collect node, pod, and container metrics from the API server on a kubelet..
+  # Configures the collector to collect node, pod, and container metrics from the API server on a kubelet.
   # Adds the kubeletstats receiver to the metrics pipeline
   # and adds the necessary rules to ClusterRole.
   # Best used with mode = daemonset.
@@ -121,6 +121,18 @@ presets:
   clusterMetrics:
     enabled: false
 
+  # Configures the collector to collect logs and metrics from pods with specific annotations.
+  # This preset can not be used together with the `logsCollection` preset.
+  # Adds the receiver_creator receiver to the logs and metrics pipelines
+  # and adds the necessary rules to ClusterRole.
+  # Best used with mode = daemonset.
+  # See https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/receiver/receivercreator/README.md#generate-receiver-configurations-from-provided-hints for details on the receiver.
+  annotationDiscovery:
+    logs:
+      enabled: false
+    metrics:
+      enabled: false
+
 configMap:
   # Specifies whether a configMap should be created (true by default)
   create: true
@@ -132,6 +144,38 @@ configMap:
   # ConfigMap template, as it enables pod restart via a template checksum annotation.
   # existingPath: ""
 
+# When enabled, the chart will configure the collector to emit its traces, metrics, and logs over http via the OTLP using the Otel Go SDK.
+# If internalTelemetryViaOTLP.metrics.enabled the chart will remove the default prometheus receiver (which was configured to scrape the Collector's metrics)
+# and the service.telemetry.metrics.address value.
+# Learn more about the Collector telemetry at https://opentelemetry.io/docs/collector/internal-telemetry/.
+#
+# THIS OPTION IS EXPERIMENTAL AND SUBJECT TO BREAKING CHANGES
+internalTelemetryViaOTLP:
+  # The endpoint where the telemetry will be exported
+  endpoint: ""
+  # Optional headers to configure the exporters
+  headers: []
+    # - name: "x-dest-auth"
+    #   value: "some auth key"
+  traces:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for traces
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for traces
+    headers: []
+  metrics:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for metrics
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for metrics
+    headers: []
+  logs:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for logs
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for logs
+    headers: []
+
 # Base collector configuration.
 # Supports templating. To escape existing instances of {{ }}, use {{` <original content> `}}.
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
@@ -140,7 +184,7 @@ config:
     debug: {}
   extensions:
     # The health_check extension is mandatory for this chart.
-    # Without the health_check extension the collector will fail the readiness and liveliness probes.
+    # Without the health_check extension the collector will fail the readiness and liveness probes.
     # The health_check extension can be modified, but should never be removed.
     health_check:
       endpoint: ${env:MY_POD_IP}:13133
@@ -169,6 +213,7 @@ config:
 #          endpoint: ${env:MY_POD_IP}:4317
 #        http:
 #          endpoint: ${env:MY_POD_IP}:4318
+#    # if internalTelemetryViaOTLP.metrics.enabled = true, prometheus receiver will be removed
 #    prometheus:
 #      config:
 #        scrape_configs:
@@ -182,7 +227,12 @@ config:
   service:
 #    telemetry:
 #      metrics:
-#        address: ${env:MY_POD_IP}:8888
+#        readers:
+#          - pull:
+#              exporter:
+#                prometheus:
+#                  host: ${env:MY_POD_IP}
+#                  port: 8888
     extensions:
       - health_check
 #    pipelines:
@@ -202,6 +252,7 @@ config:
 #          - batch
 #        receivers:
 #          - otlp
+#          # if internalTelemetryViaOTLP.metrics.enabled = true, prometheus receiver will be removed
 #          - prometheus
 #      traces:
 #        exporters:
@@ -213,9 +264,10 @@ config:
 #          - otlp
 #          - jaeger
 #          - zipkin
+
 # Helm currently has an issue (https://github.com/helm/helm/pull/12879) when using null to remove
 # default configuration from a subchart. The result is that you cannot remove default configuration
-# from `config`, such as a specific recevier or a specific pipeline, when the chart is used as a
+# from `config`, such as a specific receiver or a specific pipeline, when the chart is used as a
 # subchart.
 #
 # Until the helm bug is fixed, this field is provided as an alternative when using this chart as a subchart.
@@ -253,6 +305,8 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+  # Automatically mount a ServiceAccount's API credentials?
+  automountServiceAccountToken: true
 
 clusterRole:
   # Specifies whether a clusterRole should be created
@@ -318,6 +372,10 @@ topologySpreadConstraints: []
 
 # Allows for pod scheduler prioritisation
 priorityClassName: ""
+
+# Allows for pod to use a specific runtime class, e.g. gvisor, kata-containers
+# Also useful for the pod security admissions plugins that rely on runtimeClassName
+runtimeClassName: ""
 
 extraEnvs: []
 extraEnvsFrom: []
@@ -394,6 +452,7 @@ resources:
     cpu: 250m
     memory: 342Mi
 
+enableConfigChecksumAnnotation: true
 podAnnotations: {}
 
 podLabels: {}
@@ -417,6 +476,9 @@ dnsPolicy: ""
 
 # Custom DNS config. Required when DNS policy is None.
 dnsConfig: {}
+
+# Custom kube scheduler name.
+schedulerName: ""
 
 # only used with deployment mode
 replicaCount: 1
@@ -536,6 +598,7 @@ service:
   # enabled: true
 
   type: ClusterIP
+  # trafficDistribution: PreferClose
   # type: LoadBalancer
   # loadBalancerIP: 1.2.3.4
   # loadBalancerSourceRanges: []
@@ -627,6 +690,8 @@ autoscaling:
   behavior: {}
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+  # Supply an array of custom metrics to be used for autoscaling. It includes externalMetrics, objectMetrics, and podsMetrics.
+  additionalMetrics: []
 
 rollout:
   rollingUpdate: {}
